force-app/main/default/objects/SBQQ__CustomActionCondition__c/fields/SBQQ__ParentActionIsActive__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ParentActionIsActive__c</fullName>
        <formula>SBQQ__CustomAction__r.SBQQ__Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentConditionIsActive</label>
        <type>Checkbox</type>
    </CustomField>