force-app/main/default/objects/SBQQ__CustomActionCondition__c/fields/SBQQ__TargetObject__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TargetObject__c</fullName>
        <description>Object against which the condition is evaluated.</description>
        <inlineHelpText>Object against which the condition is evaluated.</inlineHelpText>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>